--- a/src/fetch/fetchPOST.css
+++ b/src/fetch/fetchPOST.css
@@ -10,7 +10,14 @@ body {
   min-height: 100vh;
 }
 
-div {
+div .postFetch{
   margin-bottom: 30px;
   border: 2px dashed red;
+}
+
+input,
+.btn {
+  height: 30px;  
+  font-size: 20px;
+  margin: 10px;
 }
